feat(auth): add auth ui

--- a/pablodotjs/angular.json
+++ b/pablodotjs/angular.json
@@ -51,7 +51,10 @@
               "apps/management/src/favicon.ico",
               "apps/management/src/assets"
             ],
-            "styles": ["apps/management/src/styles.scss"],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "apps/management/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
